force-app/main/default/objects/Account/fields/DnB_Domestic_Ultimate_Name__c.field-meta.xml
<CustomField>
    <fullName>DnB_Domestic_Ultimate_Name__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.DU_PrimName__c</formula>
    <inlineHelpText>Text recording the name of the highest business in the family tree that is in the same country as the subject.</inlineHelpText>
    <label>D&amp;B Domestic Ultimate Name</label>
    <type>Text</type>
</CustomField>