force-app/main/default/objects/Account/fields/DnB_Global_Ultimate_Employees__c.field-meta.xml
<CustomField>
    <fullName>DnB_Global_Ultimate_Employees__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.GU_numOfEmpl_value__c</formula>
    <inlineHelpText>The total number of employees in the business organization; it should include subsidiary and branch locations.</inlineHelpText>
    <label>D&amp;B Global Ultimate Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>