force-app/main/default/objects/Account/fields/DnB_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>DnB_Match_Score__c</fullName>
    <label>D&amp;B Match Score</label>
    <length>2</length>
    <type>Text</type>
</CustomField>