force-app/main/default/objects/Account/fields/DnB_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>DnB_Parent_Name__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.parent_PrimName__c</formula>
    <inlineHelpText>The business name of the parent company. A parent is a corporation that owns more than 50% of another corporation&apos;s capital stock; these owned companies are subsidiaries to the parent company.</inlineHelpText>
    <label>D&amp;B Parent Name</label>
    <type>Text</type>
</CustomField>