force-app/main/default/objects/Account/fields/DnB_Phone__c.field-meta.xml
<CustomField>
    <fullName>DnB_Phone__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.telephone_telephonenum__c</formula>
    <inlineHelpText>The telephone number of the business.</inlineHelpText>
    <label>D&amp;B Phone</label>
    <type>Text</type>
</CustomField>