force-app/main/default/objects/Account/fields/DnB_Site_Company_Employees__c.field-meta.xml
<CustomField>
    <fullName>DnB_Site_Company_Employees__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.DU_numOfEmpl_value__c</formula>
    <inlineHelpText>The number of employees at this location.</inlineHelpText>
    <label>D&amp;B Global Domestic Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>