force-app/main/default/objects/Account/fields/DnB_Site_Company_NAIC__c.field-meta.xml
<CustomField>
    <fullName>DnB_Site_Company_NAIC__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.IndustCodes_Descr_NAICS_priority1__c</formula>
    <inlineHelpText>The primary North American Industry Classification System (NAICS) description for a business establishment.</inlineHelpText>
    <label>D&amp;B Site (Company) NAIC</label>
    <type>Text</type>
</CustomField>