force-app/main/default/objects/Account/fields/DnB_Site_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>DnB_Site_Company_Name__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.tsn_tradestylenames_name_1__c</formula>
    <inlineHelpText>Text recording of a single name by which the organization is primarily known or identified.</inlineHelpText>
    <label>D&amp;B Site (Company) Trade Style Name</label>
    <type>Text</type>
</CustomField>