force-app/main/default/objects/Account/fields/DnB_State_Province__c.field-meta.xml
<CustomField>
    <fullName>DnB_State_Province__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.primAddr_Region_name__c</formula>
    <inlineHelpText>The abbreviation for the state or province where the business is physically located.</inlineHelpText>
    <label>D&amp;B State/Province</label>
    <type>Text</type>
</CustomField>