force-app/main/default/objects/Account/fields/DnB_Web_Address__c.field-meta.xml
<CustomField>
    <fullName>DnB_Web_Address__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.organization_website_address_domain_1__c</formula>
    <inlineHelpText>The Internet URL (Uniform Resource Locator) which uniquely identifies the proprietary website of the subject or the website preferred by the subject which gives more information on the subject.</inlineHelpText>
    <label>D&amp;B Web Address</label>
    <type>Text</type>
</CustomField>