force-app/main/default/objects/Account/fields/DnB_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>DnB_Zip_Postal_Code__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.primAddr_postalCode__c</formula>
    <inlineHelpText>An identifier used by the local country Postal Authority to identify where the business is located.</inlineHelpText>
    <label>D&amp;B Zip/Postal Code</label>
    <type>Text</type>
</CustomField>