force-app/main/default/objects/Account/fields/DPU_Rate_Avg__c.field-meta.xml
<CustomField>
    <fullName>DPU_Rate_Avg__c</fullName>
    <label>DPU Rate (Avg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>