force-app/main/default/objects/Account/fields/DU_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DU_DUNS__c</fullName>
    <formula>DNBConnect__D_B_Connect_Company_Profile__r.DU_duns__c</formula>
    <label>DU DUNS</label>
    <type>Text</type>
</CustomField>