force-app/main/default/objects/Account/fields/DUNs_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>DUNs_Update_Date__c</fullName>
    <label>DUNs Update Date</label>
    <type>Date</type>
</CustomField>