force-app/main/default/objects/Account/fields/DXP_ID__c.field-meta.xml
<CustomField>
    <fullName>DXP_ID__c</fullName>
    <label>DXP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>