force-app/main/default/objects/Account/fields/Enterprise_ISR__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_ISR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Ignite: Enterprise Inside Sales Representative</description>
    <inlineHelpText>Enterprise Inside Sales Representative - Set at the Country Parent and cascades down to the Sales Site

#26660 : Account Coverage: Add new fields to Account Coverage Section</inlineHelpText>
    <label>Enterprise ISR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>