force-app/main/default/objects/Account/fields/Enterprise_ISR_Formula__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_ISR_Formula__c</fullName>
    <description>#26660: To copy data from Country Parent Account to Sales Site and this data is further used in AccountCoverageFieldsSync Apex job to update Text field(Enterprise_ISR__c)
#31465: Data should not be wiped off on Orphan Sales Site Accounts</description>
    <formula>IF(
/*If Account is Country Parent, stores Enterprise_ISR__c value */
ISPICKVAL(IM_Hierarchy_Level__c, &apos;Country Parent&apos;),  Enterprise_ISR__c  ,
IF(
/*If Account is Sales site, stores Country Parent Account&apos;s Enterprise_ISR__c by traversing one level up the hierarchy*/
AND(ISPICKVAL(IM_Hierarchy_Level__c, &apos;Sales (Site)&apos;),NOT(ISBLANK(ParentId))), Parent.Enterprise_ISR__c,Enterprise_ISR__c))</formula>
    <label>Enterprise ISR(Formula)</label>
    <type>Text</type>
</CustomField>