force-app/main/default/objects/Account/fields/Entertainment_Services_CDE_Formula__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Services_CDE_Formula__c</fullName>
    <description>#26452 : Account Coverage: Relabel Primary BDE, Insight Owner and Entertainment Services Owner and Hide other retired &quot;Owner&quot; fields
Media and Archive Services Owner. - Set at the Country Parent and cascades down to the Sales Site

#26660: To copy data from Country Parent Account to Sales Site and this data is further used in AccountCoverageFieldsSync Apex job to update Text field(Primary_Local_Market_Rep_1__c)
#31465: Data should not be wiped off on Orphan Sales Site Accounts</description>
    <formula>IF(
/*If Account is Country Parent, stores Primary_Local_Market_Rep_1__c value */
ISPICKVAL(IM_Hierarchy_Level__c, &apos;Country Parent&apos;), Primary_Local_Market_Rep_1__c ,
IF(
/*If Account is Sales site, stores Country Parent Account&apos;s Primary_Local_Market_Rep_1__c by traversing one level up the hierarchy*/
AND(ISPICKVAL(IM_Hierarchy_Level__c, &apos;Sales (Site)&apos;),NOT(ISBLANK(ParentId))), Parent.Primary_Local_Market_Rep_1__c,Primary_Local_Market_Rep_1__c))</formula>
    <label>MAS Owner (Formula)</label>
    <type>Text</type>
</CustomField>