force-app/main/default/objects/Account/fields/Explain_any_Non_Standard_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Explain_any_Non_Standard_Reporting__c</fullName>
    <inlineHelpText>If there are non-standard Reports with this Account, please describe here</inlineHelpText>
    <label>Explain any Non-Standard Reporting</label>
    <type>TextArea</type>
</CustomField>