force-app/main/default/objects/Account/fields/Formal_Business_Review_History__c.field-meta.xml
<CustomField>
    <fullName>Formal_Business_Review_History__c</fullName>
    <label>Business Review History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>