force-app/main/default/objects/Account/fields/Former_ALM_VSE__c.field-meta.xml
<CustomField>
    <fullName>Former_ALM_VSE__c</fullName>
    <label>Former ALM VSE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>