force-app/main/default/objects/Account/fields/Former_AMD__c.field-meta.xml
<CustomField>
    <fullName>Former_AMD__c</fullName>
    <label>Former AMD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>