force-app/main/default/objects/Account/fields/Former_DBU_SDE__c.field-meta.xml
<CustomField>
    <fullName>Former_DBU_SDE__c</fullName>
    <label>Former DBU SDE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>