force-app/main/default/objects/Account/fields/Former_RIM_SDE__c.field-meta.xml
<CustomField>
    <fullName>Former_RIM_SDE__c</fullName>
    <label>Former RIM SDE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>