force-app/main/default/objects/Account/fields/Global_Account__c.field-meta.xml
<CustomField>
    <fullName>Global_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to flag an account as a global account that users can read and report on.</description>
    <label>Global Industries</label>
    <type>Checkbox</type>
</CustomField>