force-app/main/default/objects/Account/fields/Global_Account_Director__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>As per case 14975976, label Global Account Director changed to Global Account Representative

#26231: Global Account Representative.  - Set at the IMGA and cascades down to the Country Parent &amp; Sales Site</description>
    <label>Global Account Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsMcP3</relationshipName>
    <type>Lookup</type>
</CustomField>