force-app/main/default/objects/Account/fields/Global_Account_Director_Formula__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Director_Formula__c</fullName>
    <description>Case#08630064 : Cascade Global IMGA Owner fields down hierarchy
Case 14975976 : label changed from Global Account Director (Formula) to Global Account Representative (Formula)
#26231: To copy data from IMGA Account to Country Parent and Sales Site and this data is further used in AccountCoverageFieldsSync Apex job to update Lookup field(Global_Account_Director__c)
#31465: Data should not be wiped off on Orphan Sales Site Accounts</description>
    <formula>IF(
  /*If Account is IMGA, stores Global_Account_Director__c */
 ISPICKVAL(IM_Hierarchy_Level__c, &apos;IM Group (IMGA)&apos;), Global_Account_Director__c,
IF(
  /*If Account is Country Parent, stores IMGA Account&apos;s Global_Account_Director__c by traversing one level up the hierarchy*/
 ISPICKVAL(IM_Hierarchy_Level__c, &apos;Country Parent&apos;),  Parent.Global_Account_Director__c ,
IF(
  /*If Account is Sales site, stores IMGA Account&apos;s Global_Account_Director__c by traversing two levels up the hierarchy*/
AND(ISPICKVAL(IM_Hierarchy_Level__c, &apos;Sales (Site)&apos;),NOT(ISBLANK(Parent.ParentId))), Parent.Parent.Global_Account_Director__c,Global_Account_Director__c)))</formula>
    <label>Global Account Representative (Formula)</label>
    <type>Text</type>
</CustomField>