force-app/main/default/objects/Account/fields/Global_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#26231: Global Account Manager.  - Set at the IMGA and cascades down to the Country Parent &amp; Sales Site</description>
    <label>Global Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsMdex</relationshipName>
    <type>Lookup</type>
</CustomField>