force-app/main/default/objects/Account/fields/Global_IMGA_Owner__c.field-meta.xml
<CustomField>
    <fullName>Global_IMGA_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#26231: Global Managing Director (MD). - Set at the IMGA and cascades down to the Country Parent &amp; Sales Site</description>
    <label>Global Managing Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>