force-app/main/default/objects/Account/fields/Global_IMGA_Owner_Formula__c.field-meta.xml
<CustomField>
    <fullName>Global_IMGA_Owner_Formula__c</fullName>
    <description>Case#08630064 : Cascade Global IMGA Owner fields down hierarchy
#26231: To copy data from IMGA Account to Country Parent and Sales Site and this data is further used in AccountCoverageFieldsSync Apex job to update Lookup field(Global_IMGA_Owner__c)
#31465: Data should not be wiped off on Orphan Sales Site Accounts</description>
    <formula>IF(
  /*If Account is IMGA, stores Global_IMGA_Owner__c */
 ISPICKVAL(IM_Hierarchy_Level__c, &apos;IM Group (IMGA)&apos;), Global_IMGA_Owner__c,
IF(
  /*If Account is Country Parent, stores IMGA Account&apos;s Global_IMGA_Owner__c by traversing one level up the hierarchy*/
 ISPICKVAL(IM_Hierarchy_Level__c, &apos;Country Parent&apos;),  Parent.Global_IMGA_Owner__c ,
IF(
  /*If Account is Sales site, stores IMGA Account&apos;s Global_IMGA_Owner__c by traversing two levels up the hierarchy*/
AND(ISPICKVAL(IM_Hierarchy_Level__c, &apos;Sales (Site)&apos;),NOT(ISBLANK(Parent.ParentId))),    Parent.Parent.Global_IMGA_Owner__c,Global_IMGA_Owner__c)))</formula>
    <label>Global Managing Director (Formula)</label>
    <type>Text</type>
</CustomField>