force-app/main/default/objects/Account/fields/Hierarchy_ID__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_ID__c</fullName>
    <formula>/* 
This formula will traverse the Account hierarchy from (including) current record all the way to the top (up to 6 levels) and 
will display the value of the &quot;Primary CDE&quot; field of the Parent Account */ 

IF(ISBLANK( ParentId ), Id  , 

IF(ISBLANK( Parent.ParentId), Parent.Id , 

IF(ISBLANK( Parent.Parent.ParentId), Parent.Parent.Id , 

IF(ISBLANK( Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Id , 

IF(ISBLANK( Parent.Parent.Parent.Parent.ParentId ), 
Parent.Parent.Parent.Parent.Id , 

IF(ISBLANK( Parent.Parent.Parent.Parent.Parent.ParentId), 
Parent.Parent.Parent.Parent.Parent.Id , 

&quot;&quot;) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy ID</label>
    <type>Text</type>
</CustomField>