force-app/main/default/objects/Account/fields/High_Level_Key__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Key__c</fullName>
    <description>Place holder for GUDUNS Nbr- Will be in sync with formula field &apos;IM_GUDUNS_Nbr_Formula__c&apos; to affect LastModifiedField, used by integration system</description>
    <label>High Level Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>