force-app/main/default/objects/Account/fields/IM_Authorizations__c.field-meta.xml
<CustomField>
    <fullName>IM_Authorizations__c</fullName>
    <label>Authorizations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LiveVault</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>VFS</fullName>
            </value>
            <value>
                <fullName>TEMS</fullName>
            </value>
            <value>
                <fullName>DRC</fullName>
            </value>
            <value>
                <fullName>DRC MI</fullName>
            </value>
            <value>
                <fullName>VNA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>