force-app/main/default/objects/Account/fields/IM_Domestic_Ult_DUNS__c.field-meta.xml
<CustomField>
    <fullName>IM_Domestic_Ult_DUNS__c</fullName>
    <label>Domestic Ultimate DUNS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>