force-app/main/default/objects/Account/fields/IM_DUNS_NBR__c.field-meta.xml
<CustomField>
    <fullName>IM_DUNS_NBR__c</fullName>
    <label>Site (Company) DUNS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>