force-app/main/default/objects/Account/fields/IM_DUNS_Nbr_Formula__c.field-meta.xml
<CustomField>
    <fullName>IM_DUNS_Nbr_Formula__c</fullName>
    <description>Populates with an accounts Salesforce ID value.</description>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DUNS # (Formula)</label>
    <type>Text</type>
</CustomField>