force-app/main/default/objects/Account/fields/IM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>IM_External_ID__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Salesforce ID</label>
    <type>AutoNumber</type>
</CustomField>