force-app/main/default/objects/Account/fields/IM_Force_Sundog_Terr_Assignment_Update__c.field-meta.xml
<CustomField>
    <fullName>IM_Force_Sundog_Terr_Assignment_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Sundog Territory Assignment Update</label>
    <type>Checkbox</type>
</CustomField>