force-app/main/default/objects/Account/fields/IM_GUDUNS_Name__c.field-meta.xml
<CustomField>
    <fullName>IM_GUDUNS_Name__c</fullName>
    <label>Global Ultimate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>