force-app/main/default/objects/Account/fields/IM_GUDUNS_Nbr_Formula__c.field-meta.xml
<CustomField>
    <fullName>IM_GUDUNS_Nbr_Formula__c</fullName>
    <description>This formula will get the value of the Salesforce ID  from this record if it has no parent or is GUD-level account. Otherwise will traverse up the hierarchy until it reaches the GUD-level account, and will get the Salesforce ID from it.

If GUD# not found - will populate LegacyId (former Siebel row_id)</description>
    <formula>/* If This Record is GUD-Level use Salesforce ID */ 
If (TEXT( IM_Hierarchy_Level__c )==&apos;Country Parent&apos; , 
IM_External_ID__c, 
/* Else If No Parent AND This Record is NOT GUD-Level Then use BLANK*/ 
If(LEN(ParentId)==0 &amp;&amp; TEXT( IM_Hierarchy_Level__c )!=&apos;Country Parent&apos; , 
&apos;&apos;, 
/*Else If immediate parent is GUD-Level, get DUNs# from parent*/ 
If (TEXT( Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos; , 
Parent.IM_External_ID__c, 
/*Else If second parent is GUD-Level, get DUNs# from parent*/ 
If (TEXT( Parent.Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos; , 
Parent.Parent.IM_External_ID__c, 
/*Else If third parent is GUD-Level, get DUNs# from parent*/ 
If (TEXT( Parent.Parent.Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos; , 
Parent.Parent.Parent.IM_External_ID__c, 
 /*Else If fourth parent is GUD-Level, get DUNs# from parent*/ 
If (TEXT( Parent.Parent.Parent.Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos; , 
Parent.Parent.Parent.Parent.IM_External_ID__c, 
/*Else If fifth parent is GUD-Level, get DUNs# from parent*/ 
If (TEXT( Parent.Parent.Parent.Parent.Parent.IM_Hierarchy_Level__c )==&apos;Country Parent&apos; , 
Parent.Parent.Parent.Parent.Parent.IM_External_ID__c, 
&apos;&apos; 
) 
) 
) 
) 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GUD # (Formula)</label>
    <type>Text</type>
</CustomField>