force-app/main/default/objects/Account/fields/IM_Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>IM_Hierarchy_Level__c</fullName>
    <label>Hierarchy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IM Group (IMGA)</fullName>
            </value>
            <value>
                <fullName>Country Parent</fullName>
            </value>
            <value>
                <fullName>Sales (Site)</fullName>
            </value>
            <value>
                <fullName>Operational Account</fullName>
            </value>
            <value>
                <fullName>Billing Account</fullName>
            </value>
            <value>
                <fullName>0018000000ZR7LQ</fullName>
                <isActive>false</isActive>
                <label>0018000000ZR7LQ</label>
            </value>
            <value>
                <fullName>0018000000ZV4Ql</fullName>
                <isActive>false</isActive>
                <label>0018000000ZV4Ql</label>
            </value>
            <value>
                <fullName>0018000000ZVci2</fullName>
                <isActive>false</isActive>
                <label>0018000000ZVci2</label>
            </value>
            <value>
                <fullName>0018000000ZYH6f</fullName>
                <isActive>false</isActive>
                <label>0018000000ZYH6f</label>
            </value>
            <value>
                <fullName>Book of Business/IMGA</fullName>
                <isActive>false</isActive>
                <label>Book of Business/IMGA</label>
            </value>
            <value>
                <fullName>Contry Parent</fullName>
                <isActive>false</isActive>
                <label>Contry Parent</label>
            </value>
            <value>
                <fullName>Country HQ</fullName>
                <isActive>false</isActive>
                <label>Country HQ</label>
            </value>
            <value>
                <fullName>County Parent</fullName>
                <isActive>false</isActive>
                <label>County Parent</label>
            </value>
            <value>
                <fullName>Coutnry Parent</fullName>
                <isActive>false</isActive>
                <label>Coutnry Parent</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Customer Parent</fullName>
                <isActive>false</isActive>
                <label>Customer Parent</label>
            </value>
            <value>
                <fullName>Domestic Ultimate DUN</fullName>
                <isActive>false</isActive>
                <label>Domestic Ultimate DUN</label>
            </value>
            <value>
                <fullName>Domestic Ultimate DUNS</fullName>
                <isActive>false</isActive>
                <label>Domestic Ultimate DUNS</label>
            </value>
            <value>
                <fullName>Global Ultimate DUNS</fullName>
                <isActive>false</isActive>
                <label>Global Ultimate DUNS</label>
            </value>
            <value>
                <fullName>IMGA</fullName>
                <isActive>false</isActive>
                <label>IMGA</label>
            </value>
            <value>
                <fullName>Operational Accounts</fullName>
                <isActive>false</isActive>
                <label>Operational Accounts</label>
            </value>
            <value>
                <fullName>Parent</fullName>
                <isActive>false</isActive>
                <label>Parent</label>
            </value>
            <value>
                <fullName>Parent (HQ)</fullName>
                <isActive>false</isActive>
                <label>Parent (HQ)</label>
            </value>
            <value>
                <fullName>Parent Account</fullName>
                <isActive>false</isActive>
                <label>Parent Account</label>
            </value>
            <value>
                <fullName>Parent Country</fullName>
                <isActive>false</isActive>
                <label>Parent Country</label>
            </value>
            <value>
                <fullName>Parent HQ</fullName>
                <isActive>false</isActive>
                <label>Parent HQ</label>
            </value>
            <value>
                <fullName>Parent Site</fullName>
                <isActive>false</isActive>
                <label>Parent Site</label>
            </value>
            <value>
                <fullName>Parent/HQ DUNS</fullName>
                <isActive>false</isActive>
                <label>Parent/HQ DUNS</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>SALES</fullName>
                <isActive>false</isActive>
                <label>SALES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>