force-app/main/default/objects/Account/fields/IM_IMGA_Indexed__c.field-meta.xml
<CustomField>
    <fullName>IM_IMGA_Indexed__c</fullName>
    <description>Indexed IMGA field used for reporting. Populated by background process by copying values from the calculated formula field IM_IMGA</description>
    <inlineHelpText>Indexed IMGA field used for reporting. Populated by background process by copying values from the calculated formula field &quot;Iron Mtn Grouping (IMGA)&quot;</inlineHelpText>
    <label>IM Group (IMGA)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>