force-app/main/default/objects/Account/fields/IM_Industry__c.field-meta.xml
<CustomField>
    <fullName>IM_Industry__c</fullName>
    <description>#34498: Subset of the Customer&apos;s Sector</description>
    <inlineHelpText>Subset of the Customer&apos;s Sector</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture, Forestry and Fishing</fullName>
            </value>
            <value>
                <fullName>Banking and Financial Services</fullName>
            </value>
            <value>
                <fullName>Computer and Electronic Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Construction and Real Estate</fullName>
            </value>
            <value>
                <fullName>Health Care and Social Assistance</fullName>
            </value>
            <value>
                <fullName>Hyperscalers &amp; OEMs</fullName>
            </value>
            <value>
                <fullName>Industry Associations</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Media and Entertainment</fullName>
            </value>
            <value>
                <fullName>Mining and Natural Resources</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pharmaceuticals and Chemical Manufacturing</fullName>
            </value>
            <value>
                <fullName>Private Educational Services</fullName>
            </value>
            <value>
                <fullName>Professional and Technical Services</fullName>
            </value>
            <value>
                <fullName>Public Administration</fullName>
            </value>
            <value>
                <fullName>Public Educational Services</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Service Industry</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Transportation and Warehousing</fullName>
            </value>
            <value>
                <fullName>Travel and Tourism</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Conglomerate</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>